--- a/mosden/templates/omc_run.jinja
+++ b/mosden/templates/omc_run.jinja
@@ -8,21 +8,21 @@ import re
 
 batches = {{batches}}
 nps = {{nps}}
-mode = {{mode}}
+mode = '{{mode}}'
 seed = {{seed}}
 energy_MeV = {{energy}}
 mass_g = 3
 dens_g_cm3 = {{density}}
 temperature_K = {{temperature}}
 fissiles = {{fissiles}}
-xs_data = '/home/luke/projects/cross-section-libraries/endfb71/endfb71_hdf5/cross_sections.xml'
+xs_data = {{cross_sections}}
 t_in: float = {{t_in}}
 t_ex: float = {{t_ex}}
 t_net: float = {{total_irrad_s}}
 decay_times: np.ndarray[float] = {{decay_times}}
 reprocess_locations: list[str] = {{repr_locations}}
 flux = {{source}}
-chain_file = '/home/luke/github/mosden/mosden/data/unprocessed/endfb71/omcchain/chain_casl_pwr.xml'
+chain_file = '{{chain_file}}''
 reprocessing = {{reprocessing}}
 repr_scale = {{repr_scale}}
 
