--- a/mosden/templates/omc_run.jinja
+++ b/mosden/templates/omc_run.jinja
@@ -164,7 +164,7 @@ def get_times_and_rates():
         source_rates.append(source)
         index_counter += 1
     
-    decay_time_steps = np.diff(decay_times)
+    decay_time_steps = np.diff(decay_times, prepend=[0.0])
     for t in decay_time_steps:
         timesteps.append(t)
         source_rates.append(0)
