--- a/mosden/templates/omc_run.jinja
+++ b/mosden/templates/omc_run.jinja
@@ -163,7 +163,10 @@ def get_times_and_rates():
             source = flux * f_in
         source_rates.append(source)
         index_counter += 1
-    
+
+    diff = sum(timesteps) - t_net
+    timesteps[-1] = timesteps[-1] - diff
+
     decay_time_steps = np.diff(decay_times, prepend=[0.0])
     for t in decay_time_steps:
         timesteps.append(t)
